--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         <!-- icons section -->
         <div class="hidden section1 frizbi">
             <div class="w-full px-[2.5%]">
-                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb pr-[80%] sm:pr-0">
+                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb pr-[80%] sm:pr-0 mt-[10%]">
                     <div class=" flex justify-center">
                         <div class="group relative w-20" >
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -423,7 +423,7 @@
         <!-- icons section -->
         <div class="hidden section1 code">
             <div class="w-full px-[2.5%]">
-                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb sm:pr-0">
+                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb sm:pr-0 mt-[10%]">
                     <div class=" flex justify-center">
                         <div class="group relative w-20" >
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -452,7 +452,7 @@
         <!-- icons section -->
         <div class="hidden section1 egy">
             <div class="w-full px-[2.5%]">
-                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb sm:pr-0">
+                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb sm:pr-0 mt-[10%]">
                     <div class=" flex justify-center">
                         <div class="group relative w-20" >
                             <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
@@ -481,7 +481,7 @@
         <!-- icons section -->
         <div class="hidden section1 einseng">
             <div class="w-full px-[2.5%]">
-                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb  sm:pr-0">
+                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb  sm:pr-0 mt-[10%]">
                     <div class=" flex justify-center">
                         <div class="group relative w-20" >
                             <img class="relative group-hover:scale-[1] w-[18px]  lg:mr-[30%] group-hover:-translate-y-3 z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
