--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             display: none;  /* Safari and Chrome */
         }
     </style>
-    <section class="font-[Inter] lg:min-h-[580px] box-border scroll-smooth relative bodyColor bg-gradient-to-t from-[#0E0E0E] to-[#D35910]">
+    <section class="font-[Inter] lg:min-h-[580px] box-border scroll-smooth relative bodyColor bg-gradient-to-t from-[#0E0E0E] to-[#D35910] sb">
         <!-- nav bar -->
         <aside
             class="overflow-x-auto z-10 h-full absolute px-1 md:px-4 flex flex-col justify-between transition duration-300">
