--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             display: none;  /* Safari and Chrome */
         }
     </style>
-    <section class="font-[Inter] flex flex-col justify-evenly lg:h-screen box-border scroll-smooth relative bodyColor bg-gradient-to-t from-[#0E0E0E] to-[#D35910] sb">
+    <section class="font-[Inter] flex flex-col justify-evenly h-[75vh] lg:h-screen box-border scroll-smooth relative bodyColor bg-gradient-to-t from-[#0E0E0E] to-[#D35910] sb">
         <!-- nav bar -->
         <aside
             class="overflow-x-auto z-10 h-full absolute px-1 md:px-4 flex flex-col justify-between transition duration-300">
