--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
                     src="star/Cartoons/8.png" alt="">
             </div>
             <div class="image w-[40%] group flex justify-center">
-                <img class="drinkImage w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)] rounded-[59px] ease-out group-hover:shadow-none"
+                <img class="drinkImage w-[40%]  md:w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
                     src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
-                <img class="liquidImage absolute w-0 group-hover:w-[20%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] -translate-x-[32%]"
+                <img class="liquidImage absolute w-0 group-hover:w-[40%] group-hover:md:w-[20%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] -translate-x-[32%]"
                     src="star\orange/orange-juice-splash.svg" alt="">
-                <img class="fruitImage absolute z-[8] w-0 group-hover:w-[15%] translate-y-[37%] -translate-x-[20%] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[9.45deg]"
+                <img class="fruitImage absolute z-[8] w-0 group-hover:w-[30%] group-hover:md:w-[15%] translate-y-[37%] -translate-x-[20%] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[9.45deg]"
                     src="star\orange\orange-poster.svg" alt="">
-                <img class="sliceImage absolute w-0 group-hover:w-[15%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
+                <img class="sliceImage absolute w-0 group-hover:w-[30%] group-hover:md:w-[15%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
                     src="star\orange/orange-ingredients-10.svg" alt="">
-                <img class="drinkImage absolute w-[2%] blur-[1px] rotate-[30deg]  z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[50%] translate-x-[650%]"
+                <img class="drinkImage absolute w-[4%] md:w-[2%] blur-[1px] rotate-[30deg]  z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[50%] translate-x-[650%]"
                     src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
-                <img class="drinkImage absolute w-[1%] blur-[1px] -rotate-[30deg] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[110%] -translate-x-[900%]"
+                <img class="drinkImage absolute w-[2%] md:w-[1%] blur-[1px] -rotate-[30deg] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[110%] -translate-x-[900%]"
                     src="STAR/منتجات BOOM BOOM/نكهة برتقال 5.png" alt="">
             </div>
             <div dir="ltr" class="text text-white w-[20%] m-auto">
@@ -98,17 +98,17 @@
                     src="star/Cartoons/8.png" alt="">
             </div>
             <div class="image w-[40%] group flex justify-center">
-                <img class="drinkImage w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)] rounded-[59px] ease-out group-hover:shadow-none"
+                <img class="drinkImage w-[40%]  md:w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
                     src="STAR\FRIZBI\APPLE & GRAPE 5.png" alt="">
-                <img class="liquidImage absolute w-0 group-hover:w-[20%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] -translate-x-[32%]"
+                <img class="liquidImage absolute w-0 group-hover:w-[40%] group-hover:md:w-[20%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[20.87deg] translate-y-[30%] -translate-x-[32%]"
                     src="star\orange/orange-juice-splash.svg" alt="">
-                <img class="fruitImage absolute z-[8] w-0 group-hover:w-[15%] translate-y-[37%] -translate-x-[20%] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[9.45deg]"
+                <img class="fruitImage absolute z-[8] w-0 group-hover:w-[30%] group-hover:md:w-[15%] translate-y-[37%] -translate-x-[20%] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[9.45deg]"
                     src="star\orange\orange-poster.svg" alt="">
-                <img class="sliceImage absolute w-0 group-hover:w-[15%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
+                <img class="sliceImage absolute w-0 group-hover:w-[30%] group-hover:md:w-[15%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
                     src="star\orange/orange-ingredients-10.svg" alt="">
-                <img class="drinkImage absolute w-[2%] blur-[1px] rotate-[30deg]  z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[50%] translate-x-[650%]"
+                <img class="drinkImage absolute w-[4%] md:w-[2%] blur-[1px] rotate-[30deg]  z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[50%] translate-x-[650%]"
                     src="STAR\FRIZBI\APPLE & GRAPE 5.png" alt="">
-                <img class="drinkImage absolute w-[1%] blur-[1px] -rotate-[30deg] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[110%] -translate-x-[900%]"
+                <img class="drinkImage absolute w-[2%] md:w-[1%] blur-[1px] -rotate-[30deg] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[110%] -translate-x-[900%]"
                     src="STAR\FRIZBI\APPLE & GRAPE 5.png" alt="">
             </div>
             <div dir="ltr" class="text text-white w-[20%] m-auto">
@@ -139,15 +139,15 @@
                     src="star/Cartoons/8.png" alt="">
             </div>
             <div class="image w-[40%] group flex justify-center">
-                <img class="drinkImage w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)] rounded-[59px] ease-out group-hover:shadow-none"
+                <img class="drinkImage w-[40%]  md:w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
                     src="STAR\CODE ROD\CODE ROD 2.png" alt="">
-                <img class="liquidImage absolute w-0 group-hover:w-[13%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[2deg] translate-y-[30%] -translate-x-[32%]"
+                <img class="liquidImage absolute w-0 group-hover:w-[26%] group-hover:md:w-[13%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[2deg] translate-y-[30%] -translate-x-[32%]"
                     src="STAR\orange\splash-2.png" alt="">
-                <img class="sliceImage absolute w-0 group-hover:w-[13%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
+                <img class="sliceImage absolute w-0 group-hover:w-[26%] group-hover:md:w-[13%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
                     src="STAR\orange\ice.png" alt="">
-                <img class="drinkImage absolute w-[2%] blur-[1px] rotate-[30deg]  z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[50%] translate-x-[650%]"
+                <img class="drinkImage absolute w-[4%] md:w-[2%] blur-[1px] rotate-[30deg]  z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[50%] translate-x-[650%]"
                     src="STAR\CODE ROD\CODE ROD 2.png" alt="">
-                <img class="drinkImage absolute w-[1%] blur-[1px] -rotate-[30deg] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[110%] -translate-x-[900%]"
+                <img class="drinkImage absolute w-[2%] md:w-[1%] blur-[1px] -rotate-[30deg] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[110%] -translate-x-[900%]"
                     src="STAR\CODE ROD\CODE ROD 2.png" alt="">
             </div>
             <div dir="ltr" class="text text-white w-[20%] m-auto">
@@ -178,15 +178,15 @@
                     src="star/Cartoons/8.png" alt="">
             </div>
             <div class="image w-[40%] group flex justify-center">
-                <img class="drinkImage w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)] rounded-[59px] ease-out group-hover:shadow-none"
+                <img class="drinkImage w-[40%]  md:w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
                     src="STAR\EGYXOS CAN\Egyxos 3.png" alt="">
-                <img class="liquidImage absolute w-0 group-hover:w-[13%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[2deg] translate-y-[30%] -translate-x-[32%]"
+                <img class="liquidImage absolute w-0 group-hover:w-[26%] group-hover:md:w-[13%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[2deg] translate-y-[30%] -translate-x-[32%]"
                     src="STAR\orange\splash-2.png" alt="">
-                <img class="sliceImage absolute w-0 group-hover:w-[13%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
+                <img class="sliceImage absolute w-0 group-hover:w-[26%] group-hover:md:w-[13%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
                     src="STAR\orange\ice.png" alt="">
-                <img class="drinkImage absolute w-[2%] blur-[1px] rotate-[30deg]  z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[50%] translate-x-[650%]"
+                <img class="drinkImage absolute w-[4%] md:w-[2%] blur-[1px] rotate-[30deg]  z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[50%] translate-x-[650%]"
                     src="STAR\EGYXOS CAN\Egyxos 3.png" alt="">
-                <img class="drinkImage absolute w-[1%] blur-[1px] -rotate-[30deg] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[110%] -translate-x-[900%]"
+                <img class="drinkImage absolute w-[2%] md:w-[1%] blur-[1px] -rotate-[30deg] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[110%] -translate-x-[900%]"
                     src="STAR\EGYXOS CAN\Egyxos 3.png" alt="">
             </div>
             <div dir="ltr" class="text text-white w-[20%] m-auto">
@@ -217,15 +217,15 @@
                     src="star/Cartoons/8.png" alt="">
             </div>
             <div class="image w-[40%] group flex justify-center">
-                <img class="drinkImage w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)] rounded-[59px] ease-out group-hover:shadow-none"
+                <img class="drinkImage w-[40%]  md:w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
                     src="STAR\EINSENG ENERGY\EINSENG ENERGY 2.png" alt="">
-                <img class="liquidImage absolute w-0 group-hover:w-[13%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[2deg] translate-y-[0%] -translate-x-[32%]"
+                <img class="liquidImage absolute w-0 group-hover:w-[26%] group-hover:md:w-[13%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[2deg] translate-y-[0%] -translate-x-[32%]"
                     src="STAR\orange\splash-2.png" alt="">
-                <img class="sliceImage absolute w-0 group-hover:w-[13%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[35%] -translate-x-[24%]"
+                <img class="sliceImage absolute w-0 group-hover:w-[26%] group-hover:md:w-[13%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[35%] -translate-x-[24%]"
                     src="STAR\orange\ice.png" alt="">
-                <img class="drinkImage absolute w-[2%] blur-[1px] rotate-[30deg]  z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[50%] translate-x-[650%]"
+                <img class="drinkImage absolute w-[4%] md:w-[2%] blur-[1px] rotate-[30deg]  z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[50%] translate-x-[650%]"
                     src="STAR\EINSENG ENERGY\EINSENG ENERGY 2.png" alt="">
-                <img class="drinkImage absolute w-[1%] blur-[1px] -rotate-[30deg] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[110%] -translate-x-[900%]"
+                <img class="drinkImage absolute w-[2%] md:w-[1%] blur-[1px] -rotate-[30deg] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[110%] -translate-x-[900%]"
                     src="STAR\EINSENG ENERGY\EINSENG ENERGY 2.png" alt="">
             </div>
             <div dir="ltr" class="text text-white w-[20%] m-auto">
