--- a/index.html
+++ b/index.html
@@ -28,10 +28,16 @@
             <div class="m-auto overflow-x-hidden h-[40%] lg:h-[70%] sb">
                 <ul class="tracking-wide leading-5 text-sm font-normal">
                     <li class="" onclick="sections1(); showSection('boom2'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D35910]'); drinks('STAR/منتجات BOOM BOOM/نكهة برتقال 5.png');">
-                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="star/LOGO/boom-2-2.png" alt="">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="star/LOGO/boom-4-2.png" alt="">
+                    </li>
+                    <li class="" onclick="sections1(); showSection('boom_orange'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#D36609]'); drinks('STAR/منتجات BOOM BOOM CAN/BOOM BOOM OGANGE 2.png');">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700 max-w-[90px]" src="STAR\LOGO\boom-2-2.png" alt="">
                     </li>
                     <li class="" onclick="sections1(); showSection('frizbi'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#ABB200]'); drinks('STAR/FRIZBI/APPLE & GRAPE 5.png');">
                         <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="STAR\LOGO\FRIZBI-2.png" alt="">
+                    </li>
+                    <li class="" onclick="sections1(); showSection('boom_cola'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#962124]'); drinks('STAR/منتجات BOOM BOOM CAN/BOOM BOOM COLA 2.png');">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700 max-w-[90px]" src="STAR\LOGO\boom-3-2.png" alt="">
                     </li>
                     <li class="" onclick="sections1(); showSection('code'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#CE232D]'); drinks('STAR/CODE ROD/CODE ROD 2.png');">
                         <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="STAR\LOGO\CODE-2.png" alt="">
@@ -40,7 +46,10 @@
                         <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="STAR\LOGO\EGY-1-2.png" alt="">
                     </li>
                     <li class="" onclick="sections1(); showSection('einseng'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#0091CF]'); drinks('STAR/EINSENG ENERGY/EINSENG ENERGY 2.png');">
-                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700" src="STAR\LOGO\EGY-1-2.png" alt="">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700 max-w-[90px]" src="STAR\LOGO\genseng-1.png" alt="">
+                    </li>
+                    <li class="" onclick="sections1(); showSection('boom_lemon'); colors('bg-gradient-to-t from-[#0E0E0E] to-[#5A9300]'); drinks('STAR/منتجات BOOM BOOM CAN/BOOM BOOM LEMON 1.png');">
+                        <img class="w-[30%] sm:w-[50%] lg:w-full hover:scale-[1.2] transition duration-700 max-w-[90px]" src="STAR\LOGO\boom-1-2.png" alt="">
                     </li>
                 </ul>
             </div>
