--- a/index.html
+++ b/index.html
@@ -216,6 +216,45 @@
         </div>
         <!-- main section/ -->
         <!-- main section -->
+        <div class="content hidden justify-between items-center w-full section1 boom_orange">
+            <div class="w-[20%] relative group m-auto">
+                <img class="boxImage scale-[1.2] w-[80%] relative group-hover:-translate-x-[40%] -translate-x-[50%] translate-y-[50%] group-hover:translate-y-[50%] group-hover:scale-125 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
+                    src="" alt="">
+                <img class="boxImage absolute z-[9] w-[80%] group-hover:-translate-x-[50%] -translate-x-[27%] -translate-y-[70%] group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
+                    src="" alt="">
+                <img class="boxImage absolute z-[9] w-[80%] group-hover:-translate-x-[50%] -translate-x-[100%] -translate-y-[70%] group-hover:scale-90 origin-bottom-right group-hover:rotate-6 duration-700"
+                    src="" alt="">
+            </div>
+            <div class="image w-[40%] group flex justify-center">
+                <img class="drinkImage w-[40%]  md:w-[15%] z-10 transition duration-[300ms] pointer origin-bottom-right group-hover:rotate-[6.79deg] shadow-[0px_4px_0px_0px_rgba(0, 0, 0, 0)]  ease-out group-hover:shadow-none"
+                    src="STAR/منتجات BOOM BOOM CAN/BOOM BOOM OGANGE 2.png" alt="">
+                <img class="liquidImage absolute w-0 group-hover:w-[26%] group-hover:md:w-[13%] z-[7] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-[2deg] translate-y-[30%] -translate-x-[32%]"
+                    src="STAR\orange\splash-2.png" alt="">
+                <img class="sliceImage absolute w-0 group-hover:w-[26%] group-hover:md:w-[13%] z-[9] transition duration-[0.5s] pointer origin-bottom-right group-hover:-rotate-6 translate-y-[87%] -translate-x-[24%]"
+                    src="STAR\orange\ice.png" alt="">
+                <img class="drinkImage absolute w-[4%] md:w-[2%] blur-[1px] rotate-[30deg]  z-[9] transition duration-[0.5s] pointer origin-top-left group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[50%] translate-x-[650%]"
+                    src="STAR/منتجات BOOM BOOM CAN/BOOM BOOM OGANGE 2.png" alt="">
+                <img class="drinkImage absolute w-[2%] md:w-[1%] blur-[1px] -rotate-[30deg] z-[9] transition duration-[0.5s] pointer origin-top-right group-hover:rotate-6 shadow-[10px_20px_50px_0px_rgba(0, 0, 0, 0.7)]  translate-y-[110%] -translate-x-[900%]"
+                    src="STAR/منتجات BOOM BOOM CAN/BOOM BOOM OGANGE 2.png" alt="">
+            </div>
+            <div dir="ltr" class="text text-white w-[20%] m-auto">
+                <img class="logoImage" src="STAR\LOGO/BOOM-2-1.png" alt="">
+                <h2 id="fruit-text" class="text-base uppercase">Boom Boom Orange</h2>
+                <p class="text-[6px] lg:text-sm lg:mb-3">
+                    You might be looking at this Slider Revolution template and wondering how the heck you’re going to
+                    repurpose it for your
+                    needs. Don’t worry. Whether you want to edit the logo, change the images, or add new text to the
+                    sliders, it can easily
+                    be done within minutes.
+                </p>
+                <a class="text-white text-[6px] lg:text-sm py-2 px-3 rounded-[20px] border border-[#D35910] hover:bg-[#D35910]"
+                    href="https://starmesrubat.com/shop/">
+                    All products
+                </a>
+            </div>
+        </div>
+        <!-- main section/ -->
+        <!-- main section -->
         <div class="content hidden justify-between items-center w-full section1 einseng">
             <div class="w-[20%] relative group m-auto">
                 <img class="boxImage scale-[1.2] w-[80%] relative group-hover:-translate-x-[40%] -translate-x-[50%] translate-y-[50%] group-hover:translate-y-[50%] group-hover:scale-125 origin-bottom-right group-hover:rotate-6 z-[1000] duration-700"
@@ -480,6 +519,24 @@
                                 src="STAR\EGYXOS CAN\EGYXOS CAN 3.png" alt="">
                             <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
                                 src="STAR\EGYXOS CAN\EGYXOS CAN 3.png" alt="">
+                            <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">CAN</h2>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- icons section -->
+        <div class="hidden section1 boom_orange">
+            <div class="w-full px-[2.5%]">
+                <div class="flex justify-center items-center max-w-[1200px] m-auto overflow-scroll sb sm:pr-0 mt-[10%]">
+                    <div class=" flex justify-center">
+                        <div class="group relative w-20">
+                            <img class="relative group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%]  group-hover:-translate-y-3 transition z-10 duration-[0.5s] origin-bottom-right group-hover:rotate-6"
+                                onclick="changeText('Boom Boom Orange'); drinks(this.src); fruits('star/orange/orange-poster.svg'); slices('star/orange/orange-ingredients-10.svg'); liquids('star/orange/orange-juice-splash.svg');  colors('bg-gradient-to-t from-[#0E0E0E] to-[#D36609]')" src="STAR/منتجات BOOM BOOM CAN/BOOM BOOM OGANGE 2.png" alt="">
+                            <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:-rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                                src="STAR/منتجات BOOM BOOM CAN/BOOM BOOM OGANGE 2.png" alt="">
+                            <img class="absolute group-hover:scale-[1] w-[18px] h-[80px] lg:mr-[10%] group-hover:origin-bottom group-hover:rotate-[30deg] transform-gpu transition duration-700 z-[9] -translate-y-[100%]"
+                                src="STAR/منتجات BOOM BOOM CAN/BOOM BOOM OGANGE 2.png" alt="">
                             <h2 class="group-hover:text-[#D35910] text-white text-[6px] lg:text-sm">CAN</h2>
                         </div>
                     </div>
