--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
                     src="STAR\EINSENG ENERGY\EINSENG ENERGY 2.png" alt="">
             </div>
             <div dir="ltr" class="text text-white w-[20%] m-auto">
-                <img class="logoImage" src="STAR\LOGO\EGY-1.png" alt="">
+                <img class="logoImage" src="STAR\LOGO\genseng-1.png" alt="">
                 <h2 id="fruit-text" class="text-base uppercase">EINSENG ENERGY</h2>
                 <p class="text-[6px] lg:text-sm lg:mb-3">
                     You might be looking at this Slider Revolution template and wondering how the heck you’re going to
